<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/announcementText"
        style="@style/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:background="@drawable/speech_bubble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        tools:text="Announcement here" />
    <View
        android:id="@+id/speechDecor"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/speech_bubble_decor"
        app:layout_constraintTop_toBottomOf="@id/announcementText"
        app:layout_constraintStart_toStartOf="@id/announcementText" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/bodyText"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_class" />
            <TextView
                android:id="@+id/className"
                style="@style/bodyText"
                android:textSize="22sp"
                android:maxLines="100"
                android:singleLine="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="[CLASS]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">
                <CheckBox
                    android:id="@+id/heading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/bodyText"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/status_heading"
                    />
                <CheckBox
                    android:id="@+id/editable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/bodyText"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/status_editable"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/enabled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/bodyText"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/status_enabled"
                    />
                <CheckBox
                    android:id="@+id/checked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/bodyText"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/status_checked"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/scrollable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/bodyText"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/status_scrollable"
                    />
                <CheckBox
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/bodyText"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/status_password"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>